<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_loc_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/OutlineBox"
            android:hint="@string/location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp"
            app:startIconDrawable="@drawable/ic_edit_location"
            app:startIconContentDescription="@string/edit_location"
            app:endIconDrawable="@drawable/ic_search"
            app:endIconContentDescription="@string/search"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_loc_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionSearch"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginBottom="8dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:id="@+id/search_result_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/search_loc_layout"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:background="@drawable/bg_location_search_result">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/search_progress"
                style="@style/ProgressIndicator"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:indeterminate="true"
                android:visibility="gone"
                tools:visibility="visible"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/search_result_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="16dp"
            android:background="@drawable/bg_location_favorite"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>